Fixed team thumbnails on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1402,6 +1402,7 @@ a.anchor {
     background-color: #fff;
     border-radius: 10px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .team-thumbnail img {
